--- a/3.tokenizer.ipynb
+++ b/3.tokenizer.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Tokenizer Classification\n",
     "#### There are mainly three categories of tokenizers:\n",
     "<div>\n",
     "<img src=\"image/tokenizer1.png\" width=800/>\n",
@@ -350,6 +351,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Word ID and Offset mapping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The tokenizer keep track of the word each token comes from, the token before the tokenization can be checked using ***tokens()*** method, the corresponding word id can be checked using the ***word_ids()*** method with the tokenized result\n",
+    "<div><img src=\"image/tokenizer10.png\" width=800></div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['[CLS]', 'Let', \"'\", 's', 'talk', 'about', 'token', '##izer', '##s', 'powers', '[SEP]']\n",
+      "[None, 0, 1, 2, 3, 4, 5, 5, 5, 6, None]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/qiyaoxue/miniconda3/envs/python3.10/lib/python3.10/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-cased\")\n",
+    "encoding = tokenizer(\"Let's talk about tokenizers powers\")\n",
+    "print(encoding.tokens())\n",
+    "print(encoding.word_ids())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The tokenizer can also keep track of each character span in the original text that gave each token by setting ***return_offsets_mapping=True*** when tokenizing the sentence \n",
+    "<div><img src=\"image/tokenizer11.png\" width=800></div>\n",
+    "<div><img src=\"image/tokenizer12.png\" width=800></div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['[CLS]', 'Let', \"'\", 's', 'talk', 'about', 'token', '##izer', '##s', 'power', '.', '[SEP]']\n",
+      "[(0, 0), (0, 3), (3, 4), (4, 5), (6, 10), (11, 16), (17, 22), (22, 26), (26, 27), (28, 33), (33, 34), (0, 0)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/qiyaoxue/miniconda3/envs/python3.10/lib/python3.10/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-cased\")\n",
+    "encoding = tokenizer(\"Let's talk about tokenizers power.\", return_offsets_mapping=True)\n",
+    "print(encoding.tokens())\n",
+    "print(encoding[\"offset_mapping\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Here are few applications of these features\n",
+    "<img src=\"image/tokenizer13.png\" width=600>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Training a new tokenizer\n",
     "#### The tokenizer can be retrained using the ***AutoTokenizer.train_new_from_iterator*** method\n",
     "* 1. Gathering a corpus of texts\n",
@@ -442,17 +537,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Train the tokenizer with corpus"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_tokenizer = old_tokenizer.train_new_from_iterator(training_corpus, 52000)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. Train the tokenizer with corpus"
+    "#### 4. Save the results"
    ]
   },
   {
@@ -486,7 +590,6 @@
    ],
    "source": [
     "from pathlib import Path\n",
-    "new_tokenizer = old_tokenizer.train_new_from_iterator(training_corpus, 52000)\n",
     "# save the tokenizer weight to folder\n",
     "if not Path(\"code-search-net-tokenizer\").exists():\n",
     "    new_tokenizer.save_pretrained(\"code-search-net-tokenizer\")"
