--- a/5.preprocessing_pair_of_sentences.ipynb
+++ b/5.preprocessing_pair_of_sentences.ipynb
@@ -200,7 +200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Pytorch",
+   "display_name": "python3.10",
    "language": "python",
    "name": "python3"
   },
@@ -214,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
